# sp1-zkEmail

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml
.github/workflows/: build-push-deploy.yml  prove.yml
elf/: riscv32im-succinct-zkvm-elf
program/: Cargo.toml
prover/: Cargo.toml
prover/src/: handlers.rs  main.rs  types.rs  utils.rs
script/: Cargo.toml
script/test-emails/: strobe.eml
script/test-regexes/: strobe.json  test.json
