[workspace]
members = [
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "0.8.15"
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4.3"
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sp1-helper = { git = "https://github.com/succinctlabs/sp1", branch = "dev" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1", branch = "dev" }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", branch = "dev" }
tokio = "1.41.1"
tracing = "0.1.40"
zkemail-core = { git = "https://github.com/zkemail/zkemail.rs", branch = "feat/core-impl" }
zkemail-helpers = { git = "https://github.com/zkemail/zkemail.rs", branch = "feat/core-impl" }

[patch."https://github.com/zkemail/zkemail.rs"]
zkemail-core = { path = "../zkemail.rs/core" }
zkemail-helpers = { path = "../zkemail.rs/helpers" }

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "sha2-v0.10.8-patch-v1" }
rsa = { git = "https://github.com/sp1-patches/RustCrypto-RSA", branch = "patch-rsa-v0.9.6" }