[workspace]
members = [
    "program",
    "script",
    "prover",
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "0.8.19"
axum = "0.8.1"
bincode = "1.3.3"
clap = { version = "4.0", features = ["derive", "env"] }
dotenv = "0.15.0"
hex = "0.4.3"
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sp1-helper = "4.0.0"
sp1-sdk = "4.0.0"
sp1-zkvm = "4.0.0"
tokio = "1.41.1"
tower-http = "0.6.2"
tracing = "0.1.40"
zkemail-core = { git = "https://github.com/zkemail/zkemail.rs" }
zkemail-helpers = { git = "https://github.com/zkemail/zkemail.rs" }

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.6-sp1-4.0.0" }
rsa = { git = "https://github.com/sp1-patches/RustCrypto-RSA/", tag = "patch-0.9.6-sp1-4.0.0" }
