[package]
name = "prover"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sp1-sdk = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zkemail-core = { workspace = true, features = ["sp1"] }
zkemail-helpers = { workspace = true }